Fixes z-index order of maximized editor vs. forum menu (#6822)
Fixes #6820

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -4087,6 +4087,6 @@ tr[id^='list_news_lists_'] textarea {
 	word-break: break-all;
 }
 
-div.sceditor-container {
+div.sceditor-container:not(.sceditor-maximize) {
 	z-index: 4;
 }
